# Aineopintojen-harjoitusty-Algoritmit-ja-teko-ly-

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  test.py
documentation/: changelog.md  changelog.md.~1~  implementation document.md  implementation document.md.~1~  manual.md  specification document.md  testing document.md
documentation/HTML coverage/: d_145eef247bfb46b6_create_array_py.html  d_145eef247bfb46b6_dijkstra_py.html  index.html  status.json
documentation/Weekly reports/: weekly report 1.md  weekly report 2.md  weekly report 3.md  weekly report 4.md  weekly report 5.md  weekly report 6.md  weekly report 7.md
maps/: arena2.map  brc.map  medium_brc.map  smaller_brc.map  t1.map  t2.map  t3.map  t3_flipped.map  up.map  wall.map
src/: breakwall.py  cli.py  cli_handler.py  config.py  create_array.py  create_map.py  dijkstra.py  jps.py  main.py  test_map_color.py
src/services/: algorithm_service.py
src/tests/: dijkstra_test.py  jps_test.py
src/ui/: ui.py
