[tool.poetry]
name = "aineopintojen-harjoitusty-algoritmit-ja-teko-ly-"
version = "0.1.0"
description = ""
authors = ["xavier <x@xavier.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
